working on categories on header
