# routes/api.php
@@ -33,3 +33,4 @@ Route::group(['middleware' => 'auth:sanctum'], function () {
 });
 //front end data
 Route::post('/getHomeData', [HomePageController::class, 'getHomeData']);
+Route::get('/getHeaderCategoriesData', [HomePageController::class, 'getCategoriesData']);
